--- a/Places App/Controllers/CategorySpecificViewController.xib
+++ b/Places App/Controllers/CategorySpecificViewController.xib
@@ -12,7 +12,9 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="CategorySpecificViewController" customModule="Places_App" customModuleProvider="target">
             <connections>
+                <outlet property="mapView" destination="Isk-fK-e3s" id="d1Q-oo-Nmh"/>
                 <outlet property="myCollectionView" destination="9hW-vb-8l7" id="5Fa-G2-XwX"/>
+                <outlet property="segmentControl" destination="3E5-jw-WLy" id="MkI-nD-gdX"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
@@ -28,16 +30,39 @@
                         <size key="itemSize" width="50" height="50"/>
                         <size key="headerReferenceSize" width="0.0" height="0.0"/>
                         <size key="footerReferenceSize" width="0.0" height="0.0"/>
-                        <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                        <inset key="sectionInset" minX="0.0" minY="60" maxX="0.0" maxY="0.0"/>
                     </collectionViewFlowLayout>
                 </collectionView>
+                <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="Isk-fK-e3s">
+                    <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                </mapView>
+                <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="3E5-jw-WLy">
+                    <rect key="frame" x="8" y="52" width="398" height="36"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="35" id="uxS-l7-6T8"/>
+                    </constraints>
+                    <segments>
+                        <segment title="Grid View"/>
+                        <segment title="Map View"/>
+                    </segments>
+                    <connections>
+                        <action selector="valueChanged:" destination="-1" eventType="valueChanged" id="Iwg-CO-c1w"/>
+                    </connections>
+                </segmentedControl>
             </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
+                <constraint firstItem="Isk-fK-e3s" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="2ZE-bb-zzG"/>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="9hW-vb-8l7" secondAttribute="trailing" id="7wV-Ze-c4F"/>
+                <constraint firstItem="3E5-jw-WLy" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" constant="8" id="CCz-qH-MWT"/>
+                <constraint firstItem="Isk-fK-e3s" firstAttribute="bottom" secondItem="i5M-Pr-FkT" secondAttribute="bottom" id="EuK-XQ-16J"/>
+                <constraint firstItem="3E5-jw-WLy" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="8" id="Fav-ZY-vyp"/>
+                <constraint firstItem="Isk-fK-e3s" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="Unz-2C-ULH"/>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="bottom" secondItem="9hW-vb-8l7" secondAttribute="bottom" id="X6Z-eb-Dyn"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="3E5-jw-WLy" secondAttribute="trailing" constant="8" id="Y4I-LM-fVx"/>
                 <constraint firstItem="9hW-vb-8l7" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" id="aNI-30-5O3"/>
                 <constraint firstItem="9hW-vb-8l7" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="hPi-zs-CGC"/>
+                <constraint firstItem="Isk-fK-e3s" firstAttribute="trailing" secondItem="fnl-2z-Ty3" secondAttribute="trailing" id="mBb-WG-JkO"/>
             </constraints>
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
         </view>
