--- a/Places App/Base.lproj/Main.storyboard
+++ b/Places App/Base.lproj/Main.storyboard
@@ -17,10 +17,27 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" animating="YES" style="gray" translatesAutoresizingMaskIntoConstraints="NO" id="75d-QF-rQr">
+                                <rect key="frame" x="175" y="416" width="64" height="64"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="64" id="Pl4-Ww-DHc"/>
+                                    <constraint firstAttribute="width" constant="64" id="cEy-Tb-yLp"/>
+                                </constraints>
+                                <color key="color" red="0.016804177310000001" green="0.19835099580000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            </activityIndicatorView>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="75d-QF-rQr" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="PwV-ye-T2e"/>
+                            <constraint firstItem="75d-QF-rQr" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="TWB-aB-35S"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                     <navigationItem key="navigationItem" id="zKD-tW-Dwu"/>
+                    <connections>
+                        <outlet property="activityIndicator" destination="75d-QF-rQr" id="vgh-Mz-vRK"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
